--- a/table.html
+++ b/table.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- viewport width 의 device의 width와 맞춰라 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>table 연습</title>
 </head>
