--- a/block1.html
+++ b/block1.html
@@ -7,8 +7,12 @@
     
     <title>Document</title>
     <style>
+        /*
+        inline 성질인 한라인에 여러 tag배치와
+        block의 성질인 width  설정을 모두 할수있는 성질로 바꾸기 
+        */
         label{
-            display: block;
+            display: inline-block;
             width :20%;
             margin-right: 10px;
             text-align: right;
