--- a/HTML_020_flex_layout/layout_05.html
+++ b/HTML_020_flex_layout/layout_05.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <link href="../reset.css" ref="stylesheet" />
     <style>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
       body {
         display: flex;
       }
       nav {
         vertical-align: top;
-        border: 1px solid goldenrod;
+        border: 1px solid blueviolet;
         padding: 0;
         padding-right: 0;
       }
