폴더명변경

--- a/HTML_040_prellex/index.html
+++ b/HTML_040_prellex/index.html
@@ -28,28 +28,28 @@
       <nav id="main_nav">
           <h1>I'm Developer</h1>
         <ul>
-            <li class="art1 active">||||Rain||||</li>
-            <li class="art2">||||Rain||||</li>
-            <li class="art3">||||Rain||||</li>
-            <li class="art4">||||Rain||||</li>
-            <li class="art5">||||Rain||||</li>
+            <li class="art1 active">THINK</li>
+            <li class="art2">RAISE</li>
+            <li class="art3">LIFE</li>
+            <li class="art4">TIME</li>
+            <li class="art5">WANT</li>
         </ul>
       </nav>
       <nav id="dot_nav">
       <ul>
-          <li class="art1 active"><span>||||Rain||||</span></li>
-          <li class="art2"><span>||||Rain||||</span></li>
-          <li class="art3"><span>||||Rain||||</span></li>
-          <li class="art4"><span>||||Rain||||</span></li>
-          <li class="art5"><span>||||Rain||||</span></li>
+          <li class="art1 active"><span>THINK</span></li>
+          <li class="art2"><span>RAISE</span></li>
+          <li class="art3"><span>LIFE</span></li>
+          <li class="art4"><span>TIME</span></li>
+          <li class="art5"><span>WANT</span></li>
       </ul>
     </nav>
         <section id="contents">
-            <article id="art1">!!!!Oh My God!!!</article>
-            <article id="art2">!!!!Oh My God!!!!</article>
-            <article id="art3">!!!!Oh My God!!!!</article>
-            <article id="art4">!!!!Oh My God!!!!</article>
-            <article id="art5">!!!!Oh My God!!!!!</article>
+            <article id="art1">Think Diffent</article>
+            <article id="art2">Raise Your Head</article>
+            <article id="art3">The Life Is Only once</article>
+            <article id="art4">I must do what i want to do</article>
+            <article id="art5">Time is life it self</article>
         </section>
  </body>
 </html>
