Input, List,Booksproject

--- a/HTML_040_prellex/index.html
+++ b/HTML_040_prellex/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SPA(Sing page Application)</title>
+    <script src="https://kit.fontawesome.com/a0b991b540.js" crossorigin="anonymous"></script>
     <style>
 
         *{ 
@@ -22,11 +23,15 @@
      <link href="css/section.css" rel="stylesheet" />
     <link href="css/main_nav.css" rel="stylesheet" />
     <link href="css/dot_nav.css" rel="stylesheet" />
+    <link href="css/media_nav.css" rel="stylesheet" />
     <script src="js/main_nav.js"></script>
+
   </head>
   <body>
       <nav id="main_nav">
           <h1>I'm Developer</h1>
+          <div>
+          <div class="menu_toggle"><i class="fas fa-bars"></i></div>
         <ul>
             <li class="art1 active">THINK</li>
             <li class="art2">RAISE</li>
@@ -43,9 +48,11 @@
           <li class="art4"><span>TIME</span></li>
           <li class="art5"><span>WANT</span></li>
       </ul>
+    </div>      
+
     </nav>
         <section id="contents">
-            <article id="art1">Think Diffent</article>
+            <article id="art1">Think IS differentt</article>
             <article id="art2">Raise Your Head</article>
             <article id="art3">The Life Is Only once</article>
             <article id="art4">I must do what i want to do</article>
