--- a/HTML_040_prellex/index.html
+++ b/HTML_040_prellex/index.html
@@ -52,7 +52,7 @@
 
     </nav>
         <section id="contents">
-            <article id="art1">Think IS differentt</article>
+            <article id="art1"><%@include file="www.naver.com"%></article>
             <article id="art2">Raise Your Head</article>
             <article id="art3">The Life Is Only once</article>
             <article id="art4">I must do what i want to do</article>
